--- a/MovieBox.csproj
+++ b/MovieBox.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\back.png" />
     <None Remove="Images\play.png" />
     <None Remove="Images\TMDB.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Images\back.png" />
     <Resource Include="Images\play.png" />
     <Resource Include="Images\tmdb.png" />
   </ItemGroup>
